implmented renting transaction view

--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -10,5 +10,8 @@
   "adminAccount": {
     "email": "admin@FUCarRentingSystem.com",
     "password": "@@admin@@"
+  },
+  "ConnectionStrings": {
+    "DB": "Server=RADRIAR-L41R\\RADRIAR;Database=FUCarRentingManagement;User Id=sa;Password=12345;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
